syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "CleanArchitecture.Application.WeatherForecasts";

service Service {
	rpc GetWeatherForecasts (google.protobuf.Empty) returns (GetWeatherForecastsResponse);	
}

message GetWeatherForecastsResponse {
	repeated WeatherForecastDto weather_forecast_dtos = 1;
}

message WeatherForecastDto {
	string date = 1;
	int32 temperature_c = 2;
	int32 temperature_f = 3;
	string summary = 4;
}